# tf-ncl

./: .gitignore  Cargo.toml  README.md  flake.nix  test.ncl
.github/: dependabot.ncl  dependabot.yml  settings.ncl  settings.yml
.github/workflows/: ci.ncl  ci.yml  release.ncl  release.yml
examples/aws/: flake.nix  main.ncl  ssh-pubkey.sh  utils.ncl
examples/aws/modules/: aws-availability-zones.ncl  aws-provider.ncl  aws-s3-backend.ncl  aws-simple-ec2.ncl  aws-simple-vpc.ncl  aws.ncl  types.ncl
examples/github-simple/: flake.nix  main.ncl
examples/github-users/: base.ncl  extended.ncl  flake.nix  lib.ncl  main.ncl  user-contract.ncl  users.ncl  validation.ncl
examples/hello-tf/: flake.nix  main.ncl  main.tf.ncl
experiments/: deep_record.ncl  infinite-loop.ncl  overriding.ncl  schema.ncl  tagged_union.ncl  tls-schema.ncl  unbound-identifier.ncl
external-provider/: external.json  test.tf
ncl/: lib.ncl
ncl-dbg/: Cargo.toml
ncl-dbg/src/: main.rs
ncl/github/: matrix.ncl  setup-steps.ncl
nickel-hour-6/: vm.tf
nix/: devshell.nix  nickel_schema.nix  schemas.nix  terraform_schema.nix  terraform_schemas.nix
schema-fetch/: go.mod  go.sum  intermediate.go  main.go  schema_store.go
schema-merge/: go.mod  go.sum  intermediate.go  main.go  schema_store.go
tf-ncl/: Cargo.toml
tf-ncl/src/: intermediate.rs  lib.rs  main.rs  nickel.rs  nickel_builder.rs  terraform.rs
