[package]
name = "tf-ncl"
version = "0.1.0"
authors = ["vkleen"]
edition = "2018"

[dependencies]
clap = { version = "4.0.4", features = ["cargo", "derive"] }
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nickel-lang = { git = "https://github.com/tweag/nickel", branch = "pretty/add_optional" }
pretty = "0.11"
nickel-lang-utilities = { git = "https://github.com/tweag/nickel", branch = "pretty/add_optional" }
