[package]
name = "tf-ncl"
version = "0.1.0"
authors = ["vkleen"]
edition = "2018"

[dependencies]
clap = { version = "4.0.4", features = ["cargo", "derive"] }
anyhow = "1.0"
serde_json = { version = "1.0", features = ["unbounded_depth"] }
serde = { version = "1.0", features = ["derive"] }
nickel-lang-core = "0.10.0"
pretty = "0.11"
codespan = "0.11.1"

[dev-dependencies]
pretty_assertions = "1.3"
